<resources>
    <string name="app_name">shultestable</string>
    <string name="hello_blank_fragment">clean blank</string>
    <string name="memory_menu">memory_menu</string>
    <string name="speed_menu">speed_menu</string>
    <string name="statistic_menu">statistic_menu</string>
    <string name="delete">delete</string>
    <string name="easy">easy</string>
    <string name="normal">normal</string>
    <string name="hard">hard</string>
    <string name="exit">exit</string>
    <string name="ok">OK</string>
    <string name="number_to_find">number_to_find</string>
    <string name="count_mistakes">count_mistakes</string>
    <string name="SpeedMode">SpeedMode</string>
    <string name="MemoryMode">MemoryMode</string>
    <string name="exitann">Do you want to leave the game?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="infoTitle">Information</string>
    <string name="infoText">how to use this app</string>
    <string name="graphics">Graphics</string>
    <string name="Update">Update</string>
    <string-array name="mode_set">
        <item>speed</item>
        <item>memory</item>
    </string-array>
    <string-array name="level_set">
        <item>easy</item>
        <item>normal</item>
        <item>hard</item>
    </string-array>
</resources>