<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backblue"
    tools:context=".fragment.FragmentSpeedTrain">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button_background"
        android:elevation="4dp"
        android:src="@drawable/ic_back"
        android:translationZ="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/result_time"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mistakes_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="5"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_time" />

    <TextView
        android:id="@+id/mistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/count_mistakes"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/mistakes_count"
        app:layout_constraintTop_toBottomOf="@id/mistakes_count" />

    <TextView
        android:id="@+id/actual_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintTop_toBottomOf="@id/result_time"
        tools:text="10" />

    <TextView
        android:id="@+id/find_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_to_find"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/actual_number"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintTop_toBottomOf="@id/actual_number" />

    <GridLayout
        android:id="@+id/speedgame_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find_number" />

    <TextView
        android:id="@+id/result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_primary"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/end_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/result_view"
        app:layout_constraintStart_toStartOf="@id/result_view"
        app:layout_constraintTop_toBottomOf="@id/result_view" />

</androidx.constraintlayout.widget.ConstraintLayout>